<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SurpassesRecyclerVIew"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewSurpasses.ViewSurpassesActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSurpasses"
        android:layout_width="409dp"
        android:layout_height="657dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/Highest_Speed_Order_Button"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:onClick="sortHighest"
        android:text="@string/highest_speed"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Newest_order_button"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:onClick="sortNewest"
        android:text="@string/newest"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Oldest_Order_Button"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:onClick="sortOldest"
        android:text="@string/oldest"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>